# GenAction-Cost-Aware-Create-or-Reuse-Decision-Agent-for-LLM-Response-Systems

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  research_note.md
.github/workflows/: ci.yml
app/: streamlit_demo.py
data/: sample_faq_library.csv  sample_stream.csv
notebooks/: 01_dataset_preview.ipynb  02_run_experiments.ipynb
results/: ablation_results.csv  experiment_results.csv  regime_results.csv
scripts/: make_dataset.py  make_plots.py  run_ablation.py  run_experiments.py  run_regime_study.py
src/genaction/: __init__.py  embeddings.py  environment.py  evaluation.py  loss.py
src/genaction/policies/: __init__.py  always_create.py  base.py  doubly_optimistic.py  fixed_probability.py  nearest_reuse.py  static_threshold.py
tests/: conftest.py  test_environment.py  test_experiment_smoke.py  test_policies.py
